tests/errors/template-unsatisifed.o_0
t : Template { x : y + 2  y : Required }
value : (t { }).x Is Int
